--- a/frontend/src/app/pages/user-register/user-register.component.html
+++ b/frontend/src/app/pages/user-register/user-register.component.html
@@ -27,7 +27,7 @@
             <mat-label>Szerepkör</mat-label>
             <mat-select formControlName="role">
                 @for (role of roles; track role) {
-                    <mat-option>{{role}}</mat-option>
+                    <mat-option [value]="role">{{role}}</mat-option>
                 }
             </mat-select>
             @if(registerForm.get('role')?.invalid && (registerForm.get('role')?.touched || registerForm.get('role')?.dirty)){
