--- a/frontend/src/app/pages/user-register/user-register.component.scss
+++ b/frontend/src/app/pages/user-register/user-register.component.scss
@@ -9,11 +9,17 @@
     height: 100vh;
 
     form {
+        display: flex;
+        flex-direction: column;
         background-color: white;
         border: 2px solid black;
         border-radius: 10px;
         padding: 10px;
         width: 390px;
+
+        hr {
+            width: 100%;
+        }
 
         .buttons {
             display: flex;
