--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -28,7 +28,7 @@
     routerLink="/parts"
     >
       <mat-icon matListItemIcon>store</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Alkatrészek</span>
+      <span matListItemTitle *ngIf="!sideNavCollapsed()">Gyakorlati órák</span>
     </a>
   
     <a mat-list-item
@@ -37,7 +37,7 @@
     [activated]="rla.isActive"
     >
       <mat-icon matListItemIcon>polymer</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Gyártmányok</span>
+      <span matListItemTitle *ngIf="!sideNavCollapsed()">Dokumentumok</span>
     </a>
   
     <a mat-list-item
@@ -46,7 +46,7 @@
     [activated]="rla.isActive"
     >
       <mat-icon matListItemIcon>list</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Megrendelések</span>
+      <span matListItemTitle *ngIf="!sideNavCollapsed()">Statisztikák</span>
     </a>
   
     <a mat-list-item
