--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -7,7 +7,7 @@
     />
   <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
       <h2>Gyártás vezető</h2>
-      <p>{{ username }}</p>
+      <p>Name</p>
     </div>
   </div>
   <mat-nav-list>
