--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+@if(user) {
+<div>
+    <h2>Felhasználó adatai</h2>
+    <p><strong>ID:</strong> {{ user.id }}</p>
+    <p><strong>Email:</strong> {{ user.email }}</p>
+    <p><strong>Felhasználónév:</strong> {{ user.username }}</p>
+    <p><strong>Szerepkör:</strong> {{ user.role }}</p>
+</div>
+}
