handle-errors-on-FE

--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
     <img
       [width]="profilePicSize()"
       [height]="profilePicSize()"
-      src="/avatar-fixed.png"
+      src="assets/avatar-fixed.png"
       alt=""
     />
   <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
