--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!isLoginOrRegisterRoute()">
+<ng-container *ngIf="!isLoginOrRegisterRoute() && !isAdminRoute()">
     <mat-toolbar class="custom-elevation">
         <button mat-icon-button (click)="collapsed.set(!collapsed())">
             <mat-icon>menu</mat-icon>
@@ -14,6 +14,6 @@
     </mat-sidenav-container>
     </ng-container>
     
-    <ng-container *ngIf="isLoginOrRegisterRoute()">
+    <ng-container *ngIf="isLoginOrRegisterRoute() || isAdminRoute()">
         <router-outlet></router-outlet>
     </ng-container>
