--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -5,10 +5,12 @@
       src="assets/avatar-fixed.png"
       alt=""
     />
+    @if(user()){
   <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-      <h2>Gyártás vezető</h2>
-      <p>Name</p>
-    </div>
+      <h2>{{user()?.role}}</h2>
+      <p>{{user()?.username}}</p>
+  </div>
+  }
   </div>
   <mat-nav-list>
     <a mat-list-item
