--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -1,64 +1,73 @@
-<div class="sidenav-header">
-    <img
-      [width]="profilePicSize()"
-      [height]="profilePicSize()"
-      src="assets/avatar-fixed.png"
-      alt=""
-    />
-    @if(user()){
-  <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-      <h2>{{user()?.role}}</h2>
-      <p>{{user()?.username}}</p>
-  </div>
+@if(authService.currentUserSig()) {
+  <mat-toolbar class="custom-elevation">
+    <button mat-icon-button (click)="toggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
   }
-  </div>
-  <mat-nav-list>
-    <a mat-list-item
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive"
-    routerLink="/dashboard"
+  <mat-sidenav-container [ngClass]="{'hidden': !authService.currentUserSig(), 'collapsed': collapsed(), 'extended':!collapsed(), 'full-height': !authService.currentUserSig()}">
+    @if(authService.currentUserSig()) {
+    <mat-sidenav
+      mode="side"
+      [opened]="true"
+     
+      class="custom-elevation"
     >
-      <mat-icon matListItemIcon>dashboard</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Kezdőlap</span>
-    </a>
+      <div class="sidenav-header">
+        <img
+          [width]="profilePicSize()"
+          [height]="profilePicSize()"
+          src="assets/avatar-fixed.png"
+          alt=""
+        />
+        <div class="header-text" [class.hide-header-text]="collapsed()">
+          <h2>{{ authService.currentUserSig()?.role }}</h2>
+          <p>{{ authService.currentUserSig()?.username }}</p>
+        </div>
+      </div>
   
-    <a mat-list-item
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive"
-    routerLink="/parts"
-    >
-      <mat-icon matListItemIcon>store</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Gyakorlati órák</span>
-    </a>
+      <mat-nav-list>
+        <a
+          mat-list-item
+          routerLink="/dashboard"
+          routerLinkActive="selected-menu-item"
+        >
+          <mat-icon matListItemIcon>dashboard</mat-icon>
+          <span matListItemTitle *ngIf="!collapsed()">Kezdőlap</span>
+        </a>
+        <a
+          mat-list-item
+          routerLink="/parts"
+          routerLinkActive="selected-menu-item"
+        >
+          <mat-icon matListItemIcon>store</mat-icon>
+          <span matListItemTitle *ngIf="!collapsed()">Gyakorlati órák</span>
+        </a>
+        <a mat-list-item routerLinkActive="selected-menu-item">
+          <mat-icon matListItemIcon>polymer</mat-icon>
+          <span matListItemTitle *ngIf="!collapsed()">Dokumentumok</span>
+        </a>
+        <a mat-list-item routerLinkActive="selected-menu-item">
+          <mat-icon matListItemIcon>list</mat-icon>
+          <span matListItemTitle *ngIf="!collapsed()">Statisztikák</span>
+        </a>
+        <a
+          mat-list-item
+          routerLink="/login"
+          (click)="logout()"
+          routerLinkActive="selected-menu-item"
+        >
+          <mat-icon matListItemIcon>exit_to_app</mat-icon>
+          <span matListItemTitle *ngIf="!collapsed()">Kilépés</span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    }
   
-    <a mat-list-item
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive"
-    >
-      <mat-icon matListItemIcon>polymer</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Dokumentumok</span>
-    </a>
+    <mat-sidenav-content class="content">
+      <div class="content2">
+        <router-outlet></router-outlet>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
   
-    <a mat-list-item
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive"
-    >
-      <mat-icon matListItemIcon>list</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Statisztikák</span>
-    </a>
-  
-    <a mat-list-item
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive"
-    (click)="logout()"
-    routerLink="/login"
-    >
-      <mat-icon matListItemIcon>exit_to_app</mat-icon>
-      <span matListItemTitle *ngIf="!sideNavCollapsed()">Kilépés</span>
-    </a>
-  </mat-nav-list>
