--- a/frontend/src/app/components/sidenav/sidenav.component.scss
+++ b/frontend/src/app/components/sidenav/sidenav.component.scss
@@ -47,13 +47,17 @@ $collapsed-sidenav-width: 65px;
 mat-toolbar {
     position: relative;
     z-index: 5;
-    background-color: rgb(121, 178, 192);
+    background-color: rgb(228, 186, 70);
 }
 
 .custom-elevation {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3),
                 0px 8px 10px 1px rgba(0, 0, 0, 0.25),
                 0px 3px 14px 2px rgba(0, 0, 0, 0.22);
+}
+
+.content {
+    margin: 10px;
 }
   
 
