--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,5 +15,7 @@ html {
   ));
 }/* You can add global styles to this file, and also import other style files */
 
+$golde-toolbar: rgb(228, 186, 70);
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
