--- a/frontend/src/app/components/sidenav/sidenav.component.scss
+++ b/frontend/src/app/components/sidenav/sidenav.component.scss
@@ -1,96 +1,134 @@
-$extended-sidenav-width: 252px; 
+$extended-sidenav-width: 222px; 
 $collapsed-sidenav-width: 65px; 
 
-
-:host * {
-    transition: all 500ms ease-in-out;
+:host {
+  display: block;
+  height: 100%;
+  
+  * {
+    transition: all 300ms ease-in-out;
+  }
 }
 
 .sidenav-header {
-    padding-top: 24px;
-    text-align: center;
-   
-    img {
-        border-radius: 100%;
-        object-fit: cover;
-        margin-bottom: 10px;
+  padding-top: 24px;
+  text-align: center;
+  overflow: hidden;
+  
+  img {
+    border-radius: 100%;
+    object-fit: cover;
+    margin-bottom: 10px;
+    transition: all 300ms ease-in-out;
+  }
+
+  .header-text {
+    height: 3rem;
+    transition: all 300ms ease-in-out;
+    padding: 0 8px;
+
+    h2 {
+      margin: 0;
+      font-size: 0.9rem;
+      line-height: 1.3rem;
+      font-weight: 500;
+      white-space: nowrap;
     }
 
-    .header-text {
-
-        height: 3rem;
-
-        h2 {
-            margin: 0;
-            font-size: 1rem;
-            line-height: 1.5rem;
-        }
-
-        p {
-            margin: 0;
-            font-size: 1rem;
-        }
- 
+    p {
+      margin: 0;
+      font-size: 0.8rem;
+      color: rgba(0, 0, 0, 0.7);
+      white-space: nowrap;
     }
+  }
 
-    .hide-header-text {
-        opacity: 0;
-        height: 0 !important;
-    }
-
-    /* .selected-menu-item {
-        border-left: 5px solid;
-        border-left-color: blue;
-    } */
+  .hide-header-text {
+    opacity: 0;
+    height: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
 }
 
 mat-toolbar {
-    position: relative;
-    z-index: 5;
-    background-color: rgb(228, 186, 70);
+  position: relative;
+  z-index: 5;
+  background-color: rgb(228, 186, 70);
 }
 
 .custom-elevation {
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3),
-                0px 8px 10px 1px rgba(0, 0, 0, 0.25),
-                0px 3px 14px 2px rgba(0, 0, 0, 0.22);
+  box-shadow: 0px 5px 5px -3px rgba(26, 24, 24, 0.3),
+              0px 8px 10px 1px rgba(0, 0, 0, 0.25),
+              0px 3px 14px 2px rgba(0, 0, 0, 0.22);
 }
 
+mat-sidenav-container {
+  height: calc(100vh - 64px);
+  background-color: white;
 
-mat-sidenav-container{
-    height: calc(100vh - 64px);
-    background-color: white;
+  &.full-height {
+    height: 100vh;
+  }
 
-    &.full-height {
-        height: 100vh;
-    }
-
-    &.collapsed mat-sidenav{
-      /*   margin-left: 65px; */
+  &.collapsed {
+    mat-sidenav {
       width: $collapsed-sidenav-width;
-    }
-    
-
-    &.collapsed .content {
-        margin-left: $collapsed-sidenav-width !important;
-    }
-
-    &.extended .content{
-       margin-left: $extended-sidenav-width !important; 
-    }
-
-    &.extended mat-sidenav{
-        /*   margin-left: 65px; */
-        width: $extended-sidenav-width;
+      
+      .mat-list-item {
+        justify-content: center;
+        
+        span {
+          display: none;
+        }
       }
-
-    &.hidden .content,
-    &.hidden mat-sidenav{
-        margin-left: 0 !important;
     }
 }
 
-mat-sidenav, 
+  &.extended {
+    mat-sidenav {
+      width: $extended-sidenav-width;
+    }
+}
+
+  &.hidden {
+    .content,
+    mat-sidenav {
+      margin-left: 0 !important;
+    }
+  }
+}
+
+mat-sidenav {
+  background-color: #f5f5f5;
+  border-right: none;
+  
+  mat-nav-list {
+    padding-top: 0;
+    
+    a.mat-list-item {
+      margin: 0 8px;
+      width: auto;
+      border-radius: 4px;
+      min-height: 40px;
+      
+      &.selected-menu-item {
+        background-color: rgba(0, 0, 0, 0.04);
+        border-left: 3px solid #3f51b5;
+      }
+      
+      mat-icon {
+        margin-right: 8px;
+        color: #3f51b5;
+      }
+    }
+  }
+}
+
 mat-sidenav-content {
-    transition: all 500ms ease-in-out;
+  .content {
+    padding: 16px;
+    height: calc(100% - 32px);
+    overflow-y: auto;
+  }
 }
