--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -55,6 +55,7 @@ hr {
     font-size: 45px;
     font-weight: bold;
     margin-top: 30px;
+    color: $golde-toolbar;
 }
 
 .chart-card {
@@ -62,4 +63,4 @@ hr {
     padding: 16px;
     background: #f5f5f5;
     border-radius: 8px;
-  }
+}
