--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Üdvözöllek {{ user.username }}</h1>
+<h1>Üdvözöllek </h1>
 <div class="title-banner">
     <h2>Általános Információk:</h2>
 </div>
