--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -11,4 +11,13 @@
     mat-progress-bar {
       margin-top: 8px;
     }
+
+    .add-info-btn {
+      margin-top: 20px;
+      width: 10rem;
+      padding: 1rem;
+      background-color: rgb(240, 211, 45);
+      border-radius: 15px;
+      border: none;
+    }
   }
