--- a/frontend/src/app/pages/user-login/user-login.component.html
+++ b/frontend/src/app/pages/user-login/user-login.component.html
@@ -1,5 +1,5 @@
 <div class="login-form-container">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" action="" >
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h1>Bejelentkezés</h1>
 
         <mat-form-field>
