--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,13 +1,30 @@
-<div class="dashboard-container" fxLayout="column" fxLayoutGap="16px">
-    <!-- Felhasználói információk -->
+<div class="dashboard-container">
+  <h1>Üdvözlünk, {{ currentUser.username }}</h1>
+
     <mat-card>
-      <mat-card-title>Üdvözlünk, {{ currentUser.username }}!</mat-card-title>
+      <mat-card-title>Hallgató adatai:</mat-card-title>
       <mat-card-content>
         <p><strong>Email cím:</strong> {{ currentUser.email }}</p>
-        <p><strong>Szerepkör:</strong> {{ currentUser.role }}</p>
-        <p><strong>Gyakorlati hely:</strong> {{ currentUser.id }}</p>
+        <p><strong>Szerepkör:</strong> {{translateUserRole(currentUser.role)}}</p>
+        <p><strong>Név:</strong> {{ studentData.full_name }}</p>
+        <p><strong>Neptunkód:</strong> {{ studentData.neptun }}</p>
+        <p><strong>Szak:</strong> {{ studentData.major }}</p>
+        <p><strong>Egyetem:</strong> {{ studentData.university }}</p>
+        
       </mat-card-content>
       <button class="add-info-btn" (click)="navigateToStudentForm()">Hallgatói Adatok Megadása</button>
+    </mat-card>
+
+    <mat-card>
+      <mat-card-title>Gyakorlatihely adatai:</mat-card-title>
+      <mat-card-content>
+        <p><strong>Cégnév</strong> {{ currentUser.email }}</p>
+        <p><strong>Email</strong> {{translateUserRole(currentUser.role)}}</p>
+        <p><strong>Cím</strong> {{ studentData.full_name }}</p>
+        <p><strong>Mentor</strong> {{ studentData.neptun }}</p>
+        
+      </mat-card-content>
+      <button class="add-info-btn" (click)="navigateToStudentForm()">Céges Adatok Módosítása</button>
     </mat-card>
   
     <!-- Ledolgozott órák és progress bar -->
@@ -22,7 +39,7 @@
       </mat-card-content>
     </mat-card>
   
-    <!-- Utolsó bejegyzések -->
+   <!--  Utolsó bejegyzések
     <mat-card *ngIf="summary.lastEntries.length">
       <mat-card-title>Utolsó bejegyzések</mat-card-title>
       <mat-card-content>
@@ -32,6 +49,6 @@
           </mat-list-item>
         </mat-list>
       </mat-card-content>
-    </mat-card>
+    </mat-card> -->
 </div>
   
