--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -19,5 +19,10 @@
       background-color: rgb(240, 211, 45);
       border-radius: 15px;
       border: none;
+      cursor: pointer;
+    }
+
+    .add-info-btn:hover {
+      background-color: rgb(218, 200, 99);
     }
   }
